--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,26 +15,26 @@ jobs:
     steps:
       # 官方action，将代码拉取到虚拟机
       - name: Checkout  ️
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       # 安装 pnpm
       - name: Install pnpm
-      - uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v2
         with:
           version: 8
 
       # 设置node的版本
       - name: Use Node.js
-      - uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: pnpm
 
       # 安装依赖、打包
       - name: Install and Build
-      - run: |
+        run: |
           pnpm install
           pnpm build
 
